--- a/.github/workflows/update-zotero-pdf2zh.yml
+++ b/.github/workflows/update-zotero-pdf2zh.yml
@@ -29,16 +29,14 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        LATEST_RELEASE_JSON=$(gh release list -R "${{ env.UPSTREAM_REPO }}" --json tagName,isPrerelease,assets -L 10 | jq -r '[.[] | select(.isPrerelease == false and (.assets[] | .name == "server.zip"))] | .[0]')
-        
-        if [ -z "$LATEST_RELEASE_JSON" ] || [ "$LATEST_RELEASE_JSON" = "null" ]; then
-          echo "No new release with server.zip found."
+        LATEST_VERSION=$(gh release list -R "${{ env.UPSTREAM_REPO }}" --json tagName,isPrerelease -L 10 | jq -r '[.[] | select(.isPrerelease == false)] | .[0].tagName')
+        echo "latest_version=${LATEST_VERSION}" >> $GITHUB_OUTPUT
+
+        if [ -z "$LATEST_VERSION" ]; then
+          echo "No new release found."
           echo "update_needed=false" >> $GITHUB_OUTPUT
           exit 0
         fi
-
-        LATEST_VERSION=$(echo "$LATEST_RELEASE_JSON" | jq -r '.tagName')
-        echo "latest_version=${LATEST_VERSION}" >> $GITHUB_OUTPUT
 
         if [ "${{ steps.current_version.outputs.current_version }}" = "$LATEST_VERSION" ]; then
           echo "No update needed. Current: ${{ steps.current_version.outputs.current_version }}, Latest: $LATEST_VERSION"
@@ -46,10 +44,17 @@ jobs:
           exit 0
         fi
 
+        RELEASE_ASSETS_JSON=$(gh release view "$LATEST_VERSION" -R "${{ env.UPSTREAM_REPO }}" --json assets)
+        URL=$(echo "$RELEASE_ASSETS_JSON" | jq -r '.assets[] | select(.name == "server.zip") | .url')
+
+        if [ -z "$URL" ]; then
+          echo "server.zip not found in release $LATEST_VERSION."
+          echo "update_needed=false" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+
         echo "Update needed. Current: ${{ steps.current_version.outputs.current_version }}, Latest: $LATEST_VERSION"
         echo "update_needed=true" >> $GITHUB_OUTPUT
-
-        URL=$(echo "$LATEST_RELEASE_JSON" | jq -r '.assets[] | select(.name == "server.zip") | .url')
         echo "url=${URL}" >> $GITHUB_OUTPUT
 
         curl -L -o server.zip "$URL"
